[project]
name = "fileware"
dynamic = ["version", "dependencies"]
description = "Python module to, serve files in physical memory to localhost and tunnel to a public endpoint"
readme = "README.md"
authors = [{ name = "Vignesh Rao", email = "svignesh1793@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers"
]
keywords = ["personal-cloud", "file-server", "ssl"]
requires-python = ">=3.8"

[tool.setuptools]
packages = ["fileware", "fileware.helpers", "fileware.html"]
[tool.setuptools.package-data]
"fileware.html" = ["*.html"]

[tool.setuptools.dynamic]
version = { attr = "fileware.version" }
dependencies = { file = ["fileware/requirements.txt"] }

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project.optional-dependencies]
dev = ["sphinx==5.1.1", "pre-commit", "recommonmark", "pytest"]

[project.urls]
Homepage = "https://github.com/thevickypedia/fileware"
Docs = "https://thevickypedia.github.io/fileware"
Source = "https://github.com/thevickypedia/fileware"
"Bug Tracker" = "https://github.com/thevickypedia/fileware/issues"
"Release Notes" = "https://github.com/thevickypedia/fileware/blob/main/release_notes.rst"
